assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 119 conflicts: 9 shift/reduce
State 144 conflicts: 10 shift/reduce
State 145 conflicts: 9 shift/reduce
State 156 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error

    5 class: CLASS TYPEID '{' features_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';'

    7 features_list: features
    8              | %empty

    9 features: feature ';'
   10         | features feature ';'
   11         | features error ';'
   12         | error ';'

   13 feature: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}'
   14        | OBJECTID ':' TYPEID
   15        | OBJECTID ':' TYPEID ASSIGN expr
   16        | error '(' formals ')' ':' TYPEID '{' expr '}'
   17        | error ':' TYPEID
   18        | OBJECTID ':' error

   19 formals: formal
   20        | formals ',' formal
   21        | %empty

   22 formal: OBJECTID ':' TYPEID

   23 expr: OBJECTID ASSIGN expr
   24     | expr '.' OBJECTID '(' param_expr ')'
   25     | expr '@' TYPEID '.' OBJECTID '(' param_expr ')'
   26     | OBJECTID '(' param_expr ')'
   27     | IF expr THEN expr ELSE expr FI
   28     | IF expr THEN expr ELSE expr
   29     | WHILE expr LOOP expr POOL
   30     | '{' one_or_more_expr '}'
   31     | LET let_expr
   32     | CASE expr OF case_branch_list ESAC
   33     | NEW TYPEID
   34     | ISVOID expr
   35     | expr '+' expr
   36     | expr '-' expr
   37     | expr '*' expr
   38     | expr '/' expr
   39     | '~' expr
   40     | expr '<' expr
   41     | expr LE expr
   42     | expr '=' expr
   43     | NOT expr
   44     | '(' expr ')'
   45     | OBJECTID
   46     | INT_CONST
   47     | STR_CONST
   48     | BOOL_CONST

   49 let_expr: OBJECTID ':' TYPEID IN expr
   50         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   51         | OBJECTID ':' TYPEID ',' let_expr
   52         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   53         | error IN expr
   54         | error ',' let_expr

   55 one_or_more_expr: expr ';'
   56                 | one_or_more_expr expr ';'
   57                 | error ';'

   58 param_expr: expr
   59           | param_expr ',' expr
   60           | %empty

   61 case_branch_list: case_branch
   62                 | case_branch_list case_branch

   63 case_branch: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 16 24 25 26 44
')' (41) 13 16 24 25 26 44
'*' (42) 37
'+' (43) 35
',' (44) 20 51 52 54 59
'-' (45) 36
'.' (46) 24 25
'/' (47) 38
':' (58) 13 14 15 16 17 18 22 49 50 51 52 63
';' (59) 5 6 9 10 11 12 55 56 57 63
'<' (60) 40
'=' (61) 42
'@' (64) 25
'{' (123) 5 6 13 16 30
'}' (125) 5 6 13 16 30
'~' (126) 39
error (256) 4 11 12 16 17 18 53 54 57
CLASS (258) 5 6
ELSE (259) 27 28
FI (260) 27
IF (261) 27 28
IN (262) 49 50 53
INHERITS (263) 6
LET (264) 31
LOOP (265) 29
POOL (266) 29
THEN (267) 27 28
WHILE (268) 29
CASE (269) 32
ESAC (270) 32
OF (271) 32
DARROW (272) 63
NEW (273) 33
ISVOID (274) 34
STR_CONST (275) 47
INT_CONST (276) 46
BOOL_CONST (277) 48
TYPEID (278) 5 6 13 14 15 16 17 22 25 33 49 50 51 52 63
OBJECTID (279) 13 14 15 18 22 23 24 25 26 45 49 50 51 52 63
ASSIGN (280) 15 23 50 52
NOT (281) 43
LE (282) 41
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4, on right: 1 3
class (48)
    on left: 5 6, on right: 2 3
features_list (49)
    on left: 7 8, on right: 5 6
features (50)
    on left: 9 10 11 12, on right: 7 10 11
feature (51)
    on left: 13 14 15 16 17 18, on right: 9 10
formals (52)
    on left: 19 20 21, on right: 13 16 20
formal (53)
    on left: 22, on right: 19 20
expr (54)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45 46 47 48, on right: 13 15 16 23 24 25 27 28 29 32
    34 35 36 37 38 39 40 41 42 43 44 49 50 52 53 55 56 58 59 63
let_expr (55)
    on left: 49 50 51 52 53 54, on right: 31 51 52 54
one_or_more_expr (56)
    on left: 55 56 57, on right: 30 56
param_expr (57)
    on left: 58 59 60, on right: 24 25 26 59
case_branch_list (58)
    on left: 61 62, on right: 32 62
case_branch (59)
    on left: 63, on right: 61 62


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error .

    $default  reduce using rule 4 (class_list)


State 2

    5 class: CLASS . TYPEID '{' features_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' features_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    5 class: CLASS TYPEID . '{' features_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' features_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS TYPEID INHERITS . TYPEID '{' features_list '}' ';'

    TYPEID  shift, and go to state 11


State 10

    5 class: CLASS TYPEID '{' . features_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 8 (features_list)

    features_list  go to state 14
    features       go to state 15
    feature        go to state 16


State 11

    6 class: CLASS TYPEID INHERITS TYPEID . '{' features_list '}' ';'

    '{'  shift, and go to state 17


State 12

   12 features: error . ';'
   16 feature: error . '(' formals ')' ':' TYPEID '{' expr '}'
   17        | error . ':' TYPEID

    ';'  shift, and go to state 18
    '('  shift, and go to state 19
    ':'  shift, and go to state 20


State 13

   13 feature: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}'
   14        | OBJECTID . ':' TYPEID
   15        | OBJECTID . ':' TYPEID ASSIGN expr
   18        | OBJECTID . ':' error

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 14

    5 class: CLASS TYPEID '{' features_list . '}' ';'

    '}'  shift, and go to state 23


State 15

    7 features_list: features .
   10 features: features . feature ';'
   11         | features . error ';'

    error     shift, and go to state 24
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (features_list)

    feature  go to state 25


State 16

    9 features: feature . ';'

    ';'  shift, and go to state 26


State 17

    6 class: CLASS TYPEID INHERITS TYPEID '{' . features_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 8 (features_list)

    features_list  go to state 27
    features       go to state 15
    feature        go to state 16


State 18

   12 features: error ';' .

    $default  reduce using rule 12 (features)


State 19

   16 feature: error '(' . formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 21 (formals)

    formals  go to state 29
    formal   go to state 30


State 20

   17 feature: error ':' . TYPEID

    TYPEID  shift, and go to state 31


State 21

   13 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 21 (formals)

    formals  go to state 32
    formal   go to state 30


State 22

   14 feature: OBJECTID ':' . TYPEID
   15        | OBJECTID ':' . TYPEID ASSIGN expr
   18        | OBJECTID ':' . error

    error   shift, and go to state 33
    TYPEID  shift, and go to state 34


State 23

    5 class: CLASS TYPEID '{' features_list '}' . ';'

    ';'  shift, and go to state 35


State 24

   11 features: features error . ';'
   16 feature: error . '(' formals ')' ':' TYPEID '{' expr '}'
   17        | error . ':' TYPEID

    ';'  shift, and go to state 36
    '('  shift, and go to state 19
    ':'  shift, and go to state 20


State 25

   10 features: features feature . ';'

    ';'  shift, and go to state 37


State 26

    9 features: feature ';' .

    $default  reduce using rule 9 (features)


State 27

    6 class: CLASS TYPEID INHERITS TYPEID '{' features_list . '}' ';'

    '}'  shift, and go to state 38


State 28

   22 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 39


State 29

   16 feature: error '(' formals . ')' ':' TYPEID '{' expr '}'
   20 formals: formals . ',' formal

    ')'  shift, and go to state 40
    ','  shift, and go to state 41


State 30

   19 formals: formal .

    $default  reduce using rule 19 (formals)


State 31

   17 feature: error ':' TYPEID .

    $default  reduce using rule 17 (feature)


State 32

   13 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}'
   20 formals: formals . ',' formal

    ')'  shift, and go to state 42
    ','  shift, and go to state 41


State 33

   18 feature: OBJECTID ':' error .

    $default  reduce using rule 18 (feature)


State 34

   14 feature: OBJECTID ':' TYPEID .
   15        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 43

    $default  reduce using rule 14 (feature)


State 35

    5 class: CLASS TYPEID '{' features_list '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   11 features: features error ';' .

    $default  reduce using rule 11 (features)


State 37

   10 features: features feature ';' .

    $default  reduce using rule 10 (features)


State 38

    6 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' . ';'

    ';'  shift, and go to state 44


State 39

   22 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 45


State 40

   16 feature: error '(' formals ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 46


State 41

   20 formals: formals ',' . formal

    OBJECTID  shift, and go to state 28

    formal  go to state 47


State 42

   13 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 48


State 43

   15 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 63


State 44

    6 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';' .

    $default  reduce using rule 6 (class)


State 45

   22 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 22 (formal)


State 46

   16 feature: error '(' formals ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 64


State 47

   20 formals: formals ',' formal .

    $default  reduce using rule 20 (formals)


State 48

   13 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 65


State 49

   27 expr: IF . expr THEN expr ELSE expr FI
   28     | IF . expr THEN expr ELSE expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 66


State 50

   31 expr: LET . let_expr

    error     shift, and go to state 67
    OBJECTID  shift, and go to state 68

    let_expr  go to state 69


State 51

   29 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 70


State 52

   32 expr: CASE . expr OF case_branch_list ESAC

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 71


State 53

   33 expr: NEW . TYPEID

    TYPEID  shift, and go to state 72


State 54

   34 expr: ISVOID . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 73


State 55

   47 expr: STR_CONST .

    $default  reduce using rule 47 (expr)


State 56

   46 expr: INT_CONST .

    $default  reduce using rule 46 (expr)


State 57

   48 expr: BOOL_CONST .

    $default  reduce using rule 48 (expr)


State 58

   23 expr: OBJECTID . ASSIGN expr
   26     | OBJECTID . '(' param_expr ')'
   45     | OBJECTID .

    ASSIGN  shift, and go to state 74
    '('     shift, and go to state 75

    $default  reduce using rule 45 (expr)


State 59

   43 expr: NOT . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 76


State 60

   39 expr: '~' . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 77


State 61

   30 expr: '{' . one_or_more_expr '}'

    error       shift, and go to state 78
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr              go to state 79
    one_or_more_expr  go to state 80


State 62

   44 expr: '(' . expr ')'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 81


State 63

   15 feature: OBJECTID ':' TYPEID ASSIGN expr .
   24 expr: expr . '.' OBJECTID '(' param_expr ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 15 (feature)


State 64

   16 feature: error '(' formals ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 91


State 65

   13 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 92


State 66

   24 expr: expr . '.' OBJECTID '(' param_expr ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   27     | IF expr . THEN expr ELSE expr FI
   28     | IF expr . THEN expr ELSE expr
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr

    THEN  shift, and go to state 93
    LE    shift, and go to state 82
    '<'   shift, and go to state 83
    '='   shift, and go to state 84
    '+'   shift, and go to state 85
    '-'   shift, and go to state 86
    '*'   shift, and go to state 87
    '/'   shift, and go to state 88
    '@'   shift, and go to state 89
    '.'   shift, and go to state 90


State 67

   53 let_expr: error . IN expr
   54         | error . ',' let_expr

    IN   shift, and go to state 94
    ','  shift, and go to state 95


State 68

   49 let_expr: OBJECTID . ':' TYPEID IN expr
   50         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   51         | OBJECTID . ':' TYPEID ',' let_expr
   52         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr

    ':'  shift, and go to state 96


State 69

   31 expr: LET let_expr .

    $default  reduce using rule 31 (expr)


State 70

   24 expr: expr . '.' OBJECTID '(' param_expr ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   29     | WHILE expr . LOOP expr POOL
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr

    LOOP  shift, and go to state 97
    LE    shift, and go to state 82
    '<'   shift, and go to state 83
    '='   shift, and go to state 84
    '+'   shift, and go to state 85
    '-'   shift, and go to state 86
    '*'   shift, and go to state 87
    '/'   shift, and go to state 88
    '@'   shift, and go to state 89
    '.'   shift, and go to state 90


State 71

   24 expr: expr . '.' OBJECTID '(' param_expr ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   32     | CASE expr . OF case_branch_list ESAC
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr

    OF   shift, and go to state 98
    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90


State 72

   33 expr: NEW TYPEID .

    $default  reduce using rule 33 (expr)


State 73

   24 expr: expr . '.' OBJECTID '(' param_expr ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   34     | ISVOID expr .
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr

    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 34 (expr)


State 74

   23 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 99


State 75

   26 expr: OBJECTID '(' . param_expr ')'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    $default  reduce using rule 60 (param_expr)

    expr        go to state 100
    param_expr  go to state 101


State 76

   24 expr: expr . '.' OBJECTID '(' param_expr ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' param_expr ')'
   35     | expr . '+' expr
   36     | expr . '-' expr
   37     | expr . '*' expr
   38     | expr . '/' expr
   40     | expr . '<' expr
   41     | expr . LE expr
   42     | expr . '=' expr
   43     | NOT expr .
